# segwit-wallet

./: .gitignore  CMakeLists.txt  README.md  wallet_state.json
src/: base58.cpp  base58.h  bip32_util.cpp  bip32_util.h  bip32_util.hpp  bitcoin_cli.cpp  bitcoin_cli.h  bitcoin_cli.hpp  consts.hpp  error.h  hash_utils.cpp  hash_utils.hpp  hex_utils.h  key_deserializer.cpp  key_deserializer.h  key_deserializer.hpp  main.cpp  secure_memory.hpp  segwit.cpp  segwit.h  segwit.hpp  utxo.hpp  wallet.cpp  wallet.h  wallet.hpp  wallet_state.cpp  wallet_state.h  wallet_state.hpp
